--- a/css/main.css
+++ b/css/main.css
@@ -128,12 +128,18 @@ nav ul:after{
     background-color: transparent;
     color: #ffba00;
 }
+.navbar-inverse .navbar-nav>li{
+    margin-right: 3em;
+}
 .navbar-inverse .navbar-nav>li>a{
     color: #fff;
     padding-top: 20px;
+    padding-left: 0;
+    margin-left: -10px;
 }
 .navbar-inverse .navbar-nav>li>a:hover{
     color: #ffba00;
+    transition: 0.5s ease;
 }
 .tag{
     background-image: url(../images/tag.png);
@@ -464,3 +470,41 @@ footer:after{
 
 
 
+/*-------Pages---------------*/
+
+.news-section{
+    padding: 4em 0;
+}
+.news-section .bottom-form{
+    width: 100%;
+}
+.news-section .bottom-form li{
+    padding: 2em;
+    margin-bottom: 2em;
+    background-color: #ccc;
+}
+.bottom-form li h3{
+    margin-bottom: 0.5em;
+}
+.news{
+    line-height: 1.8em;
+    padding-left: 0;
+}
+.news-list li{
+    display: block;
+    width: 100%;
+    margin-bottom: 2em;
+    border: 1px solid #ccc;
+    padding: 0.5em;
+}
+.news-list li a{
+    color: #333;
+    text-decoration: none;
+}
+.news-list li:hover{
+    border: 1px solid #ffba00;
+    transition: 0.5s ease;
+}
+.news-list li p{
+    color: #888;
+}
