--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 /*-------------------------*/
 @media screen and (max-width:1087px){
     .form-group{
@@ -202,378 +201,36 @@
         padding: 0;
     }
 }
-@media screen and (max-width:384px){
-    .phone{
-        width: 160px;
+@media screen and (max-width:357px){
+    .top{
+        height: auto;
+        padding: 1em 0;
     }
-}
-@media screen and (max-width:379px){
     .logo{
-        margin-top: 5px;
+        width: 100%;
+        border-bottom: 1px solid #168d7f;
+        padding: 0.5em 0;
+    }
+    .logo img{
+        display: block;
+        width: 180px;
+        margin: 0 auto;
+    }
+    .phone{
+        padding: 5px;
+        width: 55%;
+        float: left;
+    }
+    .phone:before{
+        float: left;
     }
     .nav-tabs{
         width: 40%;
-        margin-bottom: 10px;
     }
-=======
-<<<<<<< HEAD
-/*-------------------------*/
-@media screen and (max-width:1087px){
-    .form-group{
-        width: 100%;
+    .nav-tabs li a{
+        font-size: 13px;
     }
-    .form-horizontal .control-label{
-        padding: 0;
-        text-align: center;
-    }
-    .phone{
-        width: 60%;
-    }
-}
-@media screen and (max-width:991px){
-    .form{
-        width: 100%;
-    }
-    .form-group{
-        margin-bottom: 2em;
-    }
-    .tab-content{
-        padding: 2em 1em;
-    }
-    .nav-tabs li{
-        padding: 0 0.5em;
-    }
-    .form{
-        padding-right: 0;
-    }
-}
-@media screen and (max-width:839px){
-    .phone{
-        width: 60%;
-    }
-    .bottom-form{
-        width: 100%;
-        margin-bottom: 1.5em;
-    }
-    .testinomials{
-        width: 100%;
+    .news-section .col-md-4{
         padding-left: 0;
-        padding-right: 0;
     }
-    .banner-bottom ul li:nth-child(2){
-        border-right:none; 
-    }
-}
-@media screen and (max-width:767px){
-    .form-horizontal .control-label{
-        padding: 0 2em;
-    }
-    .form-group select, .form-group input{
-        width: 65%;
-        float: right;
-        margin-top: -40px;
-    }
-    .bottom-form{
-        margin-bottom: 1em;
-    }
-    .navbar-inverse .navbar-nav{
-        background-color: #222;
-        border: none;
-        z-index: 111;
-        position: relative;
-        margin-top: 1em;
-    }
-    .navbar-inverse .navbar-nav>li>a{
-        margin-left: 10px;
-    }
-    .navbar-collapse{
-        border-top: none;
-        box-shadow: none;
-    }
-    .form{
-        height: auto;
-    }
-} 
-@media screen and (max-width:701px){
-    .tag{
-        position: relative;
-        float: right;
-        margin-top: 5px;
-        width: 130px;
-        height: 130px;
-    }
-    .phone{
-        text-align: right;
-        position: relative;
-        width: 230px;
-    }
-    .phone:before{
-        float: none;
-        display: inline-block;
-        position: absolute;
-        left: 0;
-    }
-}
-@media screen and (max-width:584px){
-    .nav-tabs li{
-        margin-bottom: 1em;
-        padding: 0.5em 2em;
-        border: 1px solid #999;
-        float: left;
-    }
-    .nav-tabs li:first-child{
-        padding-left: 2em;
-    }
-    .nav-tabs li:last-child{
-        border: 1px solid #999;;
-    }
-    .nav-tabs li.active{
-        border-color: #ffba00;
-    }
-}
-@media screen and (max-width:589px){
-    .banner-bottom ul li{
-        width: 100%;
-        border: none;
-        margin-bottom: 2em;
-        padding-right: 0;
-    }
-    .banner-bottom ul li:nth-child(2){
-        padding: 0;
-    }
-}
-@media screen and (max-width:479px){
-    .form-horizontal .control-label{
-        padding: 0 1em;
-    }
-    .form-group select, .form-group input{
-        width: 60%;
-    }
-    .logo{
-        width: 180px;
-    }
-    #header{
-        height: auto;
-    }
-    .logo img{
-        display: block;
-        margin: 0 auto;
-    }
-    .footer-left{
-        width: 100%;
-        margin-bottom: 2em;
-    }
-    .footer-right{
-        width: 100%;
-        padding: 0;
-    }
-}
-
-@media screen and (max-width:443px){
-    .logo{
-        width: 40%;
-    }
-    .phone h2{
-        font-size: 20px;
-    }
-    .phone{
-        width: 170px;
-    }
-    .phone:before{
-        margin-top: -10px;
-    }
-     .form-horizontal .control-label{
-         display: block;
-         text-align: left;
-    }
-    .form-group select, .form-group input{
-        display: block;
-        width: 100%;
-        margin-top: 0;
-        padding: 0;
-    }
-    .form-group .col-sm-8, .form-group .col-sm-7{
-        padding: 0;
-    }
-=======
-/*-------------------------*/
-@media screen and (max-width:1087px){
-    .form-group{
-        width: 100%;
-    }
-    .form-horizontal .control-label{
-        padding: 0;
-        text-align: center;
-    }
-    .phone{
-        width: 60%;
-    }
-}
-@media screen and (max-width:991px){
-    .form{
-        width: 100%;
-    }
-    .form-group{
-        margin-bottom: 2em;
-    }
-    .tab-content{
-        padding: 2em 1em;
-    }
-    .nav-tabs li{
-        padding: 0 0.5em;
-    }
-    .form{
-        padding-right: 0;
-    }
-}
-@media screen and (max-width:839px){
-    .phone{
-        width: 60%;
-    }
-    .bottom-form{
-        width: 100%;
-        margin-bottom: 1.5em;
-    }
-    .testinomials{
-        width: 100%;
-        padding-left: 0;
-        padding-right: 0;
-    }
-    .banner-bottom ul li:nth-child(2){
-        border-right:none; 
-    }
-}
-@media screen and (max-width:767px){
-    .form-horizontal .control-label{
-        padding: 0 2em;
-    }
-    .form-group select, .form-group input{
-        width: 65%;
-        float: right;
-        margin-top: -40px;
-    }
-    .bottom-form{
-        margin-bottom: 1em;
-    }
-    .navbar-inverse .navbar-nav{
-        background-color: #222;
-        border: none;
-        z-index: 111;
-        position: relative;
-        margin-top: 1em;
-    }
-    .navbar-inverse .navbar-nav>li>a{
-        margin-left: 10px;
-    }
-    .navbar-collapse{
-        border-top: none;
-        box-shadow: none;
-    }
-    .form{
-        height: auto;
-    }
-} 
-@media screen and (max-width:701px){
-    .tag{
-        position: relative;
-        float: right;
-        margin-top: 5px;
-        width: 130px;
-        height: 130px;
-    }
-    .phone{
-        text-align: right;
-        position: relative;
-        width: 230px;
-    }
-    .phone:before{
-        float: none;
-        display: inline-block;
-        position: absolute;
-        left: 0;
-    }
-}
-@media screen and (max-width:584px){
-    .nav-tabs li{
-        margin-bottom: 1em;
-        padding: 0.5em 2em;
-        border: 1px solid #999;
-        float: left;
-    }
-    .nav-tabs li:first-child{
-        padding-left: 2em;
-    }
-    .nav-tabs li:last-child{
-        border: 1px solid #999;;
-    }
-    .nav-tabs li.active{
-        border-color: #ffba00;
-    }
-}
-@media screen and (max-width:589px){
-    .banner-bottom ul li{
-        width: 100%;
-        border: none;
-        margin-bottom: 2em;
-        padding-right: 0;
-    }
-    .banner-bottom ul li:nth-child(2){
-        padding: 0;
-    }
-}
-@media screen and (max-width:479px){
-    .form-horizontal .control-label{
-        padding: 0 1em;
-    }
-    .form-group select, .form-group input{
-        width: 60%;
-    }
-    .logo{
-        width: 180px;
-    }
-    #header{
-        height: auto;
-    }
-    .logo img{
-        display: block;
-        margin: 0 auto;
-    }
-    .footer-left{
-        width: 100%;
-        margin-bottom: 2em;
-    }
-    .footer-right{
-        width: 100%;
-        padding: 0;
-    }
-}
-
-@media screen and (max-width:443px){
-    .logo{
-        width: 40%;
-    }
-    .phone h2{
-        font-size: 20px;
-    }
-    .phone{
-        width: 170px;
-    }
-    .phone:before{
-        margin-top: -10px;
-    }
-     .form-horizontal .control-label{
-         display: block;
-         text-align: left;
-    }
-    .form-group select, .form-group input{
-        display: block;
-        width: 100%;
-        margin-top: 0;
-        padding: 0;
-    }
-    .form-group .col-sm-8, .form-group .col-sm-7{
-        padding: 0;
-    }
->>>>>>> origin/master
->>>>>>> origin/gh-pages
 }
