--- a/css/main.css
+++ b/css/main.css
@@ -158,7 +158,39 @@ nav ul:after{
     color: #fff;
     font-size: 12px;
 }
+.open > .dropdown-menu {
+  -webkit-transform: scale(1, 1);
+  transform: scale(1, 1);  
+  opacity:1;
+    margin-left: -10px;
+}
+  
+.dropdown-menu {
+  opacity:.3;
+  -webkit-transform-origin: top;
+  transform-origin: top;
+  -webkit-animation-fill-mode: forwards;  
+  animation-fill-mode: forwards; 
+  -webkit-transform: scale(1, 0);
+  transition: all 0.3s linear;
+  -webkit-transition: all 0.3s linear;
+    width: 100%;
+}
 
+.caret-up {
+    width: 0; 
+    height: 0; 
+    border-left: 4px solid rgba(0, 0, 0, 0);
+    border-right: 4px solid rgba(0, 0, 0, 0);
+    border-bottom: 4px solid;
+    display: inline-block;
+    margin-left: 2px;
+    vertical-align: middle;
+}
+.navbar-inverse .navbar-nav>.open>a:hover{
+    background-color: transparent;
+    color: #ffba00;
+}
 /*----Navigation---*/
 
 
