--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ a{
     position: relative;
 }
 .top{
-    background-color: #46ae9c;
+    background-color: #ff7043;
     padding-top: 0.3em;
     border: 3px dotted #333;
     margin-bottom: 3px;
@@ -81,7 +81,7 @@ a{
 }
 /*bottom*/
 .bottom{
-    border: 1px solid #46ae9c;
+    border: 1px solid #E64A19;
     width: 100%;
     height: 60px;
     z-index: 100;
@@ -129,13 +129,13 @@ nav ul:after{
     color: #ffba00;
 }
 .navbar-inverse .navbar-nav>li{
-    margin-right: 3em;
+    margin-right: 1em;
 }
 .navbar-inverse .navbar-nav>li>a{
     color: #fff;
     padding-top: 20px;
-    padding-left: 0;
-    margin-left: -10px;
+    background-color: #ff7043;
+    
 }
 .navbar-inverse .navbar-nav>li>a:hover{
     color: #ffba00;
@@ -174,9 +174,26 @@ nav ul:after{
   -webkit-transform: scale(1, 0);
   transition: all 0.3s linear;
   -webkit-transition: all 0.3s linear;
-    width: 100%;
+    display: block;
+    padding: 0 2em;
+    background-color: #333;
+    column-count: 2;
+    column-gap: 40px;
+    column-rule: 1px solid #222;
+    -webkit-column-count: 2;
+    -webkit-column-gap: 40px;
+    -webkit-column-rule: 1px solid #222;
+    -mozcolumn-count: 2;
+    -moz-column-gap: 40px;
+    -moz-column-rule: 1px solid #222;
 }
-
+.dropdown-menu li {
+    padding: 10px 0;
+    text-align: center;
+}
+.dropdown-menu li a{
+    color: #fff;
+}
 .caret-up {
     width: 0; 
     height: 0; 
@@ -187,7 +204,7 @@ nav ul:after{
     margin-left: 2px;
     vertical-align: middle;
 }
-.navbar-inverse .navbar-nav>.open>a:hover{
+.navbar-inverse .navbar-nav>.open>a:hover,.navbar-inverse .navbar-nav>.open>a:focus{
     background-color: transparent;
     color: #ffba00;
 }
@@ -276,6 +293,8 @@ nav ul:after{
 .form-group input{
     border-radius: 0;
     height: 35px;
+    width: 100%;
+    padding-left: 1em;
 }
 .form-group select{
     width: 100%;
@@ -285,6 +304,15 @@ nav ul:after{
 }
 p.center{
     text-align: center;
+}
+.heading{
+    line-height: 2em;
+    color: #fff;
+    text-align: center;
+    margin-bottom: 2em;
+}
+.heading h3{
+    margin-bottom: 1em;
 }
 /*--------Banner Bottom------------*/
 
