--- a/css/main.css
+++ b/css/main.css
@@ -6,12 +6,11 @@
     content: '';
 }
 body{
-    background-color: #eee;
     line-height: 1.8em;
     margin: 0;
     padding: 0;
     font-smoothing: antialiased ;
-    font-family: 'Oswald' , sans-serif;
+    font-family: 'Roboto Slab' , sans-serif;
 }
 ul{
     list-style: none;
@@ -42,16 +41,13 @@ a{
 
 /*------------Header-------------------*/
 #header{
-    background-color: #222;
-    height: 135px;
     width: 100%;
     position: relative;
 }
 .top{
-    background-color: #eee;
-    padding: 12px 0;
-    border: 3px dotted #333;
-    margin-bottom: 3px;
+    background-color: rgba(65, 182, 85, 0.12);
+    padding: 5px 0;
+    border: 3px dotted #388E3C;
 }
 .logo{
     width: 330px;
@@ -59,9 +55,9 @@ a{
 }
 .phone{
     float: right;
-    margin-top: 0;
     width: 40%;
-    color: #388E3C;
+    color: #666;
+    margin-top: 20px
 }
 .phone:before{
     content: '';
@@ -80,42 +76,13 @@ a{
 }
 /*bottom*/
 .bottom{
-    border: 1px solid #388E3C;
+    padding: 5px 0;
+    background-color: #41b655;
+    border-bottom: 2px solid #feea39;
     width: 100%;
-    height: 62px;
+    height: 67px;
     z-index: 100;
 }
-/*#burgernav{
-    float: left;
-    color: #46ae9c;
-    display: none;
-    font-size: 30px;
-    background: transparent;
-    border:none;
-}
-nav{
-    line-height: 60px;
-}
-nav ul li{
-    float: left;
-    margin-right: 1em;
-}
-nav ul li.active a{
-    color: #388E3C;
-}
-nav ul li a{
-    color: #fff;
-}
-nav ul li a:hover{
-    color: #388E3C;
-    text-decoration: none;
-    transition: 0.5s;    
-}
-nav ul:after{
-    clear: both;
-    content: '';
-    display: block;
-}*/
 .navbar-toggle{
     float: left;
 }
@@ -123,27 +90,25 @@ nav ul:after{
     background-color: transparent;
     border: none;
 }
-.navbar-inverse .navbar-nav>li{
-    border-right: 1px solid #000;
-}
 .navbar-nav{
     padding-left: 0;
 }
 .navbar-inverse .navbar-nav>li>a{
     color: #fff;
-    padding-top: 20px;
-    background-color: #222;
-    padding: 20px 50px;
+    background-color: #41b655;
+    border: 1px solid #388E3C;
+    padding: 0 2em;
+    line-height: 55px;
+    margin-right: 1em;
     
 }
 .navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover{
-    background-color: #333;
-    border-left: 1px solid #000;
-    color: #fff;
+    color: #feea39;
+    background: #388E3C;
 }
-.navbar-inverse .navbar-nav>li>a:hover{
-    background-color: #333;
-    transition: 0.5s ease;
+.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover{
+    background-color: #388E3C;
+    color: #feea39;
 }
 .tag{
     background-image: url(../images/tag.png);
@@ -155,8 +120,8 @@ nav ul:after{
     right: 4%;
 }
 .tag p{
-    margin-top: 20px;
-    margin-left: 5px;
+    margin-top: 25px;
+    margin-left: 7px;
     width: 90px;
     text-align: center;
     color: #fff;
@@ -166,7 +131,6 @@ nav ul:after{
   -webkit-transform: scale(1, 1);
   transform: scale(1, 1);  
   opacity:1;
-    margin-left: -10px;
 }
   
 .dropdown-menu {
@@ -179,31 +143,20 @@ nav ul:after{
   transition: all 0.3s linear;
   -webkit-transition: all 0.3s linear;
     display: block;
-    padding: 1em;
-    background-color: #333;
-    border: 1px solid #000;
-    column-count: 2;
-    column-gap: px;
-    column-rule: 1px solid #222;
-    position: absolute;
-    left: 10px;
-    -webkit-column-count: 2;
-    -webkit-column-gap: 40px;
-    -webkit-column-rule: 1px solid #222;
-    -mozcolumn-count: 2;
-    -moz-column-gap: 40px;
-    -moz-column-rule: 1px solid #222;
+    background-color: #388E3C;
+    border: none;
 }
 .dropdown-menu li {
-    padding: 10px 0;
-    text-align: center;
+    text-align: left;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #8ec73f;
 }
 .dropdown-menu li a{
     color: #fff;
 }
 .dropdown-menu li a:hover{
-    color: #388E3C;
-    background-color: transparent;
+    color: #feea39;
+    background: none;
 }
 .caret-up {
     width: 0; 
@@ -215,26 +168,27 @@ nav ul:after{
     margin-left: 2px;
     vertical-align: middle;
 }
-.navbar-inverse .navbar-nav>.open>a:hover,.navbar-inverse .navbar-nav>.open>a:focus{
-    background-color: #333;
-    color: #fff;
-}
 /*----Navigation---*/
 
 
 /*---Banner---*/
 .banner{
-    background-image: url(../images/banner.jpg);
+    background-image: url(../images/gzmuosidakwtxmqsdyvv.jpg);
     background-size: cover;
+    background-color: #eee;
     width: 100%;
     padding: 3em 0;
 }
 .form{
-    background-color: rgba(0, 0, 0, 0.74);
+    //background-image: url(../images/banner2.jpg);
+    background-size: cover;
+    //background-color: rgba(0, 0, 0, 0.57);
+    background-color: #fff;
+    border: 1px solid #41b655;
     margin: 0 auto;
+    box-shadow: 1px 1px 15px #999;
     width: 80%;
-    padding: 2em;
-    border-top: 3px solid #388E3C;
+    padding: 0;
 }
 .clearfix:after{
     content: '';
@@ -243,19 +197,13 @@ nav ul:after{
 }
 /*---tabs--*/
 .nav-tabs{
-    border: none;
-    display: block;
+    display: inline-block;
     margin: 0 auto;
+    background-color: #41b655;
 }
 .nav-tabs li{
-    border-right: 1px solid #999;
-    padding: 0 2em;
-}
-.nav-tabs li:first-child{
-    padding-left: 0;
-}
-.nav-tabs li:last-child{
-    border: none;
+    border: 1px solid #388E3C;
+    padding: 10px 20px;
 }
 .nav-tabs li a{
     font-size: 16px;
@@ -264,22 +212,22 @@ nav ul:after{
     border: none;
 }
 .nav-tabs li.active a{
-    background: none;
-    color: #388E3C;
+    background: #41b655;
+    color: #feea39;
     border: none;
 }
 .nav-tabs li a:hover{
     background: none;
-    color: #388E3C;
+    color: #feea39;
     border: none;
 }
 .nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover{
+    color: #feea39;
     background: none;
     border: none;
-    color: #388E3C;
 }
 .nav-tabs li.active a:hover{
-    color: #388E3C;
+    color: #feea39;
 }
 
 .tab-content{
@@ -287,11 +235,16 @@ nav ul:after{
 }
 /**------Form-------------**/
 .form-group{
-    margin-bottom: 4em;
+    margin-bottom: 3em;
+}
+.form-group:after{
+    content: '';
+    display: block;
+    clear: both;
 }
 .form-horizontal .control-label{
-    color: #fff;
-    background-color: #222;
+    color: #333;
+    background-color: #eee;
     margin-right: -1em;
     text-align: left;
     height: 35px;
@@ -303,6 +256,7 @@ nav ul:after{
 }
 .form-group input{
     border-radius: 0;
+    border: 1px solid #999;
     height: 35px;
     width: 100%;
     padding-left: 1em;
@@ -318,7 +272,7 @@ p.center{
 }
 .heading{
     line-height: 2em;
-    color: #fff;
+    color: #333;
     text-align: center;
     margin-bottom: 2em;
 }
@@ -346,6 +300,7 @@ p.center{
 
 .banner-bottom{
     background-color: #fff;
+    border-top: 5px solid #eee;
     height: auto;
     padding: 4em 0;
 }
@@ -400,14 +355,14 @@ p.center{
 }  
 a.button{
     padding: 0.5em 2em;
-    background-color: #388E3C;
+    background-color: #41b655;
     color: #333;
     border-radius: 5px;
     text-decoration: none;
     transition: 0.5s all ease-out;
 }
 a.button:hover{
-    background-color: #46ae9c;
+    background-color: #feea39;
     transition: 0.5s all ease-in;
 }
 .bottom-form-group select, .bottom-form-group input{
@@ -444,10 +399,10 @@ a.button:hover{
 }
 .carousel-indicators li{
     float: left;
-    border: 2px solid #388E3C;
+    border: 2px solid #41b655;
 }
 .carousel-indicators li.active{
-    background-color: #388E3C;
+    background-color: #41b655;
 }
 
 /*--------Banner Bottom------------*/
@@ -476,14 +431,16 @@ a.button:hover{
 
 /*--------Footer------*/
 footer{
-    background-color: #252525;
+    background-color: rgba(65, 182, 85, 0.12);
+    border-top: 5px solid #eee;
     padding: 2em 0;
-    color: #fff
+    color: #333
 }
 footer h3{
-    margin-bottom: 1em;
+    margin-bottom: 0;
     padding-bottom: 0.5em;
-    border-bottom: 1px solid #999;
+    border-bottom: 1px solid #eee;
+    color: #333;
 }
 .footer-left{
     width: 30%;
@@ -501,11 +458,11 @@ footer:after{
     content: '';
 }
 .footer-right a{
-    color: #388E3C;
+    color: #333;
     text-decoration: none;
 }
 .footer-right a:hover{
-    color: #46ae9c;
+    color: #41b655;
 }
 .slider8{
     background-color: none;
@@ -521,11 +478,11 @@ footer:after{
 }
 .slide{
     width: 100%;
-    color: #fff;
+    color: #333;
     background-color: transparent;
 }
 .slide a{
-    color: #fff;
+    color: #333;
 }
 .slide a:hover{
     color: #388E3C;
@@ -543,14 +500,21 @@ footer:after{
     font-size: 20px;
 }
 .outside a{
-    color: #fff;
+    color: #333;
 }
 .outside a:hover{
     color: #388E3C;
 }
+.next{
+    content: '\f138';
+    background-color: #999;
+    width: 20px;
+    height: 20px;
+    display: block;
+}
 .copyright{
-    background-color: #000;
-    color: #fff
+    background-color: #41b655;
+    color: #333
 }
 
 
@@ -565,9 +529,8 @@ footer:after{
     width: 100%;
 }
 .news-section .bottom-form li{
-    padding: 2em;
-    margin-bottom: 2em;
-    background-color: #ccc;
+    padding: 2.5em;
+    background-color: #eee;
 }
 .bottom-form li h3{
     margin-bottom: 0.5em;
@@ -632,4 +595,12 @@ footer:after{
 }
 .details a{
     color: #388E3C;
+}
+
+
+
+.view-form{
+    background-color: rgba(65, 182, 85, 0.12);
+    padding: 3em 1em;
+    margin-bottom: 4em;
 }
