--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ body{
     padding: 0;
     font-smoothing: antialiased ;
     font-family: 'Roboto Slab' , sans-serif;
+    overflow-x: hidden;
 }
 ul{
     list-style: none;
@@ -356,7 +357,7 @@ p.center{
 a.button{
     padding: 0.5em 2em;
     background-color: #41b655;
-    color: #333;
+    color: #fff;
     border-radius: 5px;
     text-decoration: none;
     transition: 0.5s all ease-out;
@@ -364,6 +365,7 @@ a.button{
 a.button:hover{
     background-color: #feea39;
     transition: 0.5s all ease-in;
+    color: #333;
 }
 .bottom-form-group select, .bottom-form-group input{
     width: 100%;
@@ -597,10 +599,74 @@ footer:after{
     color: #388E3C;
 }
 
-
-
 .view-form{
     background-color: rgba(65, 182, 85, 0.12);
     padding: 3em 1em;
     margin-bottom: 4em;
+}
+/*---KFZ Form---*/
+#krz-form{
+    padding: 2em 0;
+}
+.nav-pills>li>a{
+    border: 1px solid #eee;
+    border-radius: 0;
+}
+.nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover{
+    background-color: #388E3C;
+    color: #feea39;
+    border-radius: 0;
+}
+.well{
+    border-radius: 0;
+}
+.well h2{
+    margin-bottom: 1em;
+}
+.kfz-form{
+    background-image: url(../images/kfz%20form.png);
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 55px;
+    position: relative;
+}
+.kfz-form input{
+    position: absolute;
+    left:30px;
+    top: 6px;
+    width: 80px;
+    height: 45px;
+}
+.tab-content{
+    padding: 2em 2em 2em 0;
+    margin-top: 2em;
+    border: 1px solid #ccc;
+    background-color: #fff;
+}
+.select{
+    border: 1px solid #ccc;
+    color: #999;
+    background-color: #388E3C;
+    display: inline-block;
+}
+.select li{
+    display: inline-block;
+    padding: 0.5em 1em;
+    border-right: 1px solid #eee;
+}
+.select li a{
+    color: #fff;
+    text-decoration: none;
+}
+.select li.active a{
+    color: #feea39;
+}
+
+.radios{
+}
+.radios input{
+    width: 20px;
+    height: 20px;
+    float: left;
+    margin-right: 1em;
 }
