--- a/css/main.css
+++ b/css/main.css
@@ -190,6 +190,7 @@ a{
     box-shadow: 1px 1px 15px #999;
     width: 80%;
     padding: 0;
+    overflow-x: hidden;
 }
 .clearfix:after{
     content: '';
@@ -211,6 +212,9 @@ a{
     padding: 0;
     color: #fff;
     border: none;
+}
+.nav-tabs li a b{
+    font-weight: normal;
 }
 .nav-tabs li.active a{
     background: #41b655;
@@ -630,7 +634,7 @@ footer:after{
     height: 55px;
     position: relative;
 }
-.kfz-form input{
+.kfz-form .kfz-input{
     position: absolute;
     left:30px;
     top: 6px;
@@ -669,4 +673,63 @@ footer:after{
     height: 20px;
     float: left;
     margin-right: 1em;
+}
+.tips{
+    background-color: #ccc;
+    padding: 1em;
+    position: relative;
+}
+.tips:before{
+    content: '';
+    display: inline-block;
+    position: absolute;
+    top: -10px;
+    left: 20px;
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid #ccc;
+}
+
+
+/*Contact form*/
+.contact-form{
+    padding: 4em;
+}
+.contact-form h3{
+    margin-bottom: 2em;
+}
+.contact-form textarea{
+    width: 100%;
+}
+.checkbox-form-group{
+    margin-bottom: 2em;
+}
+input.checkbox{
+    float: left;
+    width: 15px;
+    height: 15px;
+    margin-right: 1em;
+}
+
+
+
+.qanda{
+    padding: 4em 0;
+}
+.qanda .tab-content{
+    padding-left: 1em;
+}
+.question-list{
+    display: block;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.question-list li{
+    background-color: #eee;
+    margin-bottom: 1em;
+    padding: 5px;
+    border-radius: 5px;
 }
