--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ a{
 .top{
     background-color: rgba(65, 182, 85, 0.12);
     padding: 5px 0;
-    border: 3px dotted #388E3C;
+    border-bottom: 1px solid #feea39;
 }
 .logo{
     width: 330px;
@@ -732,4 +732,66 @@ input.checkbox{
     margin-bottom: 1em;
     padding: 5px;
     border-radius: 5px;
+}
+
+
+
+
+
+
+.insurance-section{
+    padding: 4em 0;
+    line-height: 2em;
+}
+.i-col{
+    margin-bottom: 4em;
+}
+.i-col p{
+    margin-bottom: 2em;
+    color: #999;
+}
+.insurance-section h3{
+    margin-bottom: 1em;
+    //padding-bottom: 1em;
+    display: inline-block;
+    //border-bottom: 2px solid #388E3C;
+    position: relative;
+}
+/*.insurance-section h3:after{
+    content: '';
+    position: absolute;
+    display: block;
+    background-color: #feea39;
+    width: 50px;
+    height: 2px;
+    top: 50px;
+    left: 0;
+}
+.insurance-section h3:hover{
+    border-bottom-color: #ccc;
+    transition: 0.5s all ease-in-out;
+}*/
+.insurance-section h3 a{
+    color: #333;
+    text-decoration: none;
+}
+.insurance-list{
+    padding: 1em;
+    margin-bottom: 2em;
+    border: 1px solid #ccc;
+}
+.insurance-list li a{
+    color: #999;
+}
+.insurance-list li{
+    display: block;
+    position: relative;
+}
+.insurance-list li:after{
+    content: '\f054';
+    font-family: 'fontawesome';
+    position: absolute;
+    font-size: 15px;
+    color: #999;
+    right: 10px;
 }
